--- a/mcMMO/Changelog.txt
+++ b/mcMMO/Changelog.txt
@@ -1,5 +1,10 @@
 Changelog:
 #Versions without changelogs probably had very small misc fixes, like tweaks to the source code#
+Version 1.0
+Taming Skill
+Leaderboards
+Players won't hand out XP if they died within the last 5 seconds
+
 Version 0.9.29
 Fixes critical bug involving water turning anything into clay
 
