Another WIP, some tweaks to WoodCutting and a working version of Leaderboards for MySQL.

--- a/mcMMO/Changelog.txt
+++ b/mcMMO/Changelog.txt
@@ -1,6 +1,8 @@
 Changelog:
 #Versions without changelogs probably had very small misc fixes, like tweaks to the source code#
 Version 1.0
+Added Leaf Blower to WoodCutting
+Different Trees give different WoodCutting XP
 Water changing Gravel to Clay removed
 Code Organized/Optimized further
 MySQL Support
