--- a/mcMMO/Changelog.txt
+++ b/mcMMO/Changelog.txt
@@ -1,6 +1,7 @@
 Changelog:
 #Versions without changelogs probably had very small misc fixes, like tweaks to the source code#
 Version 1.0
+Players can now repair Stone/Wood tools
 Fixed duping bug with WG/Block Protection Plugins
 Added Leaf Blower to WoodCutting
 Different Trees give different WoodCutting XP
