--- a/mcMMO/com/gmail/nossr50/messages_fi.properties
+++ b/mcMMO/com/gmail/nossr50/messages_fi.properties
@@ -1,5 +1,5 @@
 Combat.WolfExamine=[[GREEN]]**Tutkit sutta käyttämällä Pedon Tarinaa**
-Combat.WolfShowMaster=[[DARK_GREEN]]Pedon isäntä \: {0}
+Combat.WolfShowMaster=[[DARK_GREEN]]Pedon isäntä : {0}
 Combat.Ignition=[[RED]]**SYTYTYS**
 Combat.BurningArrowHit=[[DARK_RED]]Palava nuoli osui sinuun\!
 Combat.TouchedFuzzy=[[DARK_RED]]Touched Fuzzy. Felt Dizzy.
@@ -248,76 +248,53 @@ mcPlayerListener.WoodcuttingSkill=[[YELLOW]]Puunkaato:
 mcPlayerListener.YourStats=[[GREEN]]Sinun MMO tilastosi
 Party.InformedOnJoin={0} [[GREEN]] on liittynyt ryhmään
 Party.InformedOnQuit={0} [[GREEN]] on lähtenyt ryhmästä
-Skills.YourGreenTerra=[[GREEN]]Voit taas  käyttää [[YELLOW]]Vihermaa [[GREEN]]taitoasi!
-Skills.YourTreeFeller=[[GREEN]]Voit taas  käyttää [[YELLOW]]Puunkaataja [[GREEN]]taitoasi!
-Skills.YourSuperBreaker=[[GREEN]]Voit taas käyttää [[YELLOW]]Supermurskain [[GREEN]]taitoasi!
-Skills.YourSerratedStrikes=[[GREEN]]Voit taas käyttää [[YELLOW]]Sahalaitaiset Iskut [[GREEN]]taitoasi!
-Skills.YourBerserk=[[GREEN]]Voit taas käyttää [[YELLOW]]Raivopää [[GREEN]]taitoasi!
-Skills.YourSkullSplitter=[[GREEN]]Voit taas käyttää [[YELLOW]]Kallonhalkoja [[GREEN]]taitoasi!
-Skills.YourGigaDrillBreaker=[[GREEN]]Voit taas käyttää [[YELLOW]]Giga Drill Breaker [[GREEN]]taitoasi!
-Skills.TooTired=[[RED]]Olet liian väsynyt käyttääksesi tuota taitoa uudestaan.
-Skills.ReadyHoe=[[GREEN]]**OLET VALMIINA KÄYTTÄMÄÄN KUOKKAA**
-Skills.LowerHoe=[[GRAY]]**LASKET KUOKKASI**
-Skills.ReadyAxe=[[GREEN]]**OLET VALMIINA KÄYTTÄMÄÄN KIRVESTÄ**
-Skills.LowerAxe=[[GRAY]]**LASKET KIRVEESI**
-Skills.ReadyFists=[[GREEN]]**OLET VALMIINA KÄYTTÄMÄÄN NYRKKEJÄSI**
-Skills.LowerFists=[[GRAY]]**LASKET NYRKKISI**
-Skills.ReadyPickAxe=[[GREEN]]**OLET VALMIINA KÄYTTÄMÄÄN HAKKUASI**
-Skills.LowerPickAxe=[[GRAY]]**LASKET HAKKUSI**
-Skills.ReadyShovel=[[GREEN]]**OLET VALMIINA KÄYTTÄMÄÄN LAPIOTASI**
-Skills.LowerShovel=[[GRAY]]**LASKET LAPIOSI**
-Skills.ReadySword=[[GREEN]]**OLET VALMIINA KÄYTTÄMÄÄN MIEKKAASI**
-Skills.LowerSword=[[GRAY]]**LASKET MIEKKASI**
-Skills.BerserkOn=[[GREEN]]**BERSERK ACTIVATED**
-Skills.BerserkPlayer=[[GREEN]]{0}[[DARK_GREEN]] has used [[RED]]Berserk!
-Skills.GreenTerraOn=[[GREEN]]**VIHERMAA AKTIVOITU**
-Skills.GreenTerraPlayer=[[GREEN]]{0}[[DARK_GREEN]] käytti [[RED]]Vihermaata!
-Skills.TreeFellerOn=[[GREEN]]**PUUNKAATAJA AKTIVOITU**
-Skills.TreeFellerPlayer=[[GREEN]]{0}[[DARK_GREEN]] käytti [[RED]]Puunkaatajaa!
-Skills.SuperBreakerOn=[[GREEN]]**SUPERMURSKAIN AKTIVOITU**
-Skills.SuperBreakerPlayer=[[GREEN]]{0}[[DARK_GREEN]] käytti [[RED]]Supermurskainta!
-Skills.SerratedStrikesOn=[[GREEN]]**SAHALAITAISET ISKUT AKTIVOITU**
-Skills.SerratedStrikesPlayer=[[GREEN]]{0}[[DARK_GREEN]] käytti [[RED]]Sahalaitaisia Iskuja!
-Skills.SkullSplitterOn=[[GREEN]]**KALLONHALKOJA AKTIVOITU**
-Skills.SkullSplitterPlayer=[[GREEN]]{0}[[DARK_GREEN]] käytti [[RED]]Kallonhalkojaa!
-Skills.GigaDrillBreakerOn=[[GREEN]]**GIGA DRILL BREAKER AKTIVOITU**
-Skills.GigaDrillBreakerPlayer=[[GREEN]]{0}[[DARK_GREEN]] käytti [[RED]]Giga Drill Breakeria!
-Skills.GreenTerraOff=[[RED]]**Vihermaa kului pois**
-Skills.TreeFellerOff=[[RED]]**Puunkaataja kului pois**
-Skills.SuperBreakerOff=[[RED]]**Supermurskain kului pois**
-Skills.SerratedStrikesOff=[[RED]]**Sahalaitaiset Iskut kului pois**
-Skills.BerserkOff=[[RED]]**Raivopää kului pois**
-Skills.SkullSplitterOff=[[RED]]**Kallonhalkoja kului pois**
-Skills.GigaDrillBreakerOff=[[RED]]**Giga Drill Breaker kului pois**
-Skills.TamingUp=[[YELLOW]]Sait {0} kesytyspistettä. Kokonaismäärä ({1})
-Skills.AcrobaticsUp=[[YELLOW]]Sait {0} akrobatiikkapistettä. Kokonaismäärä ({1})
-Skills.ArcheryUp=[[YELLOW]]Sait {0} jousiammuntapistettä. Kokonaismäärä ({1})
-Skills.SwordsUp=[[YELLOW]]Sait {0} miekkapistettä. Kokonaismäärä ({1})
-Skills.AxesUp=[[YELLOW]]Sait {0} kirvespistettä. Kokonaismäärä ({1})
-Skills.UnarmedUp=[[YELLOW]]Sait {0} aseistamattomuuspistettä. Kokonaismäärä ({1})
-Skills.HerbalismUp=[[YELLOW]]Sait {0} yrttihoitopistettä. Kokonaismäärä ({1})
-Skills.MiningUp=[[YELLOW]]Sait {0} louhimispistettä. Kokonaismäärä ({1})
-Skills.WoodcuttingUp=[[YELLOW]]Sait {0} puunkaatopistettä. Kokonaismäärä ({1})
-Skills.RepairUp=[[YELLOW]]Sait {0} korjauspistettä. Kokonaismäärä ({1})
-Skills.ExcavationUp=[[YELLOW]]Sait {0} kaivantopistettä. Kokonaismäärä ({1})
-Skills.FeltEasy=[[GRAY]]That felt easy.
-Skills.StackedItems=[[DARK_RED]]You can't repair stacked items
-Skills.NeedMore=[[DARK_RED]]You need more
-Skills.AdeptDiamond=[[DARK_RED]]You're not skilled enough to repair Diamond
-Skills.FullDurability=[[GRAY]]That is at full durability.
-Skills.Disarmed=[[DARK_RED]]You have been disarmed!
-mcPlayerListener.SorcerySkill=Sorcery: 
-m.SkillSorcery=SORCERY
-Sorcery.HasCast=[[GREEN]]**CASTING**[[GOLD]]
-Sorcery.Current_Mana=[[DARK_AQUA]]MP
-Sorcery.SpellSelected=[[GREEN]]-=([[GOLD]]{0}[[GREEN]])=- [[RED]]([[GRAY]]{1}[[RED]])
-Sorcery.Cost=[[RED]][COST] {0} MP
-Sorcery.OOM=[[DARK_AQUA]][[[GOLD]]{2}[[DARK_AQUA]]][[DARK_GRAY]] Out Of Mana [[YELLOW]]([[RED]]{0}[[YELLOW]]/[[GRAY]]{1}[[YELLOW]])
-Sorcery.Water.Thunder=THUNDER
-Sorcery.Curative.Self=CURE SELF
-Sorcery.Curative.Other=CURE OTHER
-m.LVL=[[DARK_GRAY]]LVL: [[GREEN]]{0} [[DARK_AQUA]]XP[[YELLOW]]([[GOLD]]{1}[[YELLOW]]/[[GOLD]]{2}[[YELLOW]])
-Combat.BeastLore=[[GREEN]]**BEAST LORE**
-Combat.BeastLoreOwner=[[DARK_AQUA]]Owner ([[RED]]{0}[[DARK_AQUA]])
-Combat.BeastLoreHealthWolfTamed=[[DARK_AQUA]]Health ([[GREEN]]{0}[[DARK_AQUA]]/20)
-Combat.BeastLoreHealthWolf=[[DARK_AQUA]]Health ([[GREEN]]{0}[[DARK_AQUA]]/8)
+Skills.YourGreenTerra=[[GREEN]]Your [[YELLOW]]Green Terra [[GREEN]]ability is refreshed!
+Skills.YourTreeFeller=[[GREEN]]Your [[YELLOW]]Tree Feller [[GREEN]]ability is refreshed!
+Skills.YourSuperBreaker=[[GREEN]]Your [[YELLOW]]Super Breaker [[GREEN]]ability is refreshed!
+Skills.YourSerratedStrikes=[[GREEN]]Your [[YELLOW]]Serrated Strikes [[GREEN]]ability is refreshed!
+Skills.YourBerserk=[[GREEN]]Your [[YELLOW]]Berserk [[GREEN]]ability is refreshed!
+Skills.YourSkullSplitter=[[GREEN]]Your [[YELLOW]]Skull Splitter [[GREEN]]ability is refreshed!
+Skills.YourGigaDrillBreaker=[[GREEN]]Your [[YELLOW]]Giga Drill Breaker [[GREEN]]ability is refreshed!
+Skills.TooTired=[[RED]]You are too tired to use that ability again.
+Skills.ReadyHoe=[[GREEN]]**YOU READY YOUR HOE**
+Skills.LowerHoe=[[GRAY]]**YOU LOWER YOUR HOE**
+Skills.ReadyAxe=[[GREEN]]**YOU READY YOUR AXE**
+Skills.LowerAxe=[[GRAY]]**YOU LOWER YOUR AXE**
+Skills.ReadyFists=[[GREEN]]**YOU READY YOUR FISTS**
+Skills.LowerFists=[[GRAY]]**YOU LOWER YOUR FISTS**
+Skills.ReadyPickAxe=[[GREEN]]**YOU READY YOUR PICKAXE**
+Skills.LowerPickAxe=[[GRAY]]**YOU LOWER YOUR PICKAXE**
+Skills.ReadyShovel=[[GREEN]]**YOU READY YOUR SHOVEL**
+Skills.LowerShovel=[[GRAY]]**YOU LOWER YOUR SHOVEL**
+Skills.ReadySword=[[GREEN]]**YOU READY YOUR SWORD**
+Skills.LowerSword=[[GRAY]]**YOU LOWER YOUR SWORD**
+Skills.GreenTerraOn=[[GREEN]]**GREEN TERRA ACTIVATED**
+Skills.GreenTerraPlayer=[[GREEN]]{0}[[DARK_GREEN]] has used [[RED]]Green Terra!
+Skills.TreeFellerOn=[[GREEN]]**TREE FELLER ACTIVATED**
+Skills.TreeFellerPlayer=[[GREEN]]{0}[[DARK_GREEN]] has used [[RED]]Tree Feller!
+Skills.SuperBreakerOn=[[GREEN]]**SUPER BREAKER ACTIVATED**
+Skills.SuperBreakerPlayer=[[GREEN]]{0}[[DARK_GREEN]] has used [[RED]]Super Breaker!
+Skills.SerratedStrikesOn=[[GREEN]]**SERRATED STRIKES ACTIVATED**
+Skills.SerratedStrikesPlayer=[[GREEN]]{0}[[DARK_GREEN]] has used [[RED]]Serrated Strikes!
+Skills.SkullSplitterOn=[[GREEN]]**SKULL SPLITTER ACTIVATED**
+Skills.SkullSplitterPlayer=[[GREEN]]{0}[[DARK_GREEN]] has used [[RED]]Skull Splitter!
+Skills.GigaDrillBreakerOn=[[GREEN]]**GIGA DRILL BREAKER ACTIVATED**
+Skills.GigaDrillBreakerPlayer=[[GREEN]]{0}[[DARK_GREEN]] has used [[RED]]Giga Drill Breaker!
+Skills.GreenTerraOff=[[RED]]**Green Terra has worn off**
+Skills.TreeFellerOff=[[RED]]**Tree Feller has worn off**
+Skills.SuperBreakerOff=[[RED]]**Super Breaker has worn off**
+Skills.SerratedStrikesOff=[[RED]]**Serrated Strikes has worn off**
+Skills.BerserkOff=[[RED]]**Berserk has worn off**
+Skills.SkullSplitterOff=[[RED]]**Skull Splitter has worn off**
+Skills.GigaDrillBreakerOff=[[RED]]**Giga Drill Breaker has worn off**
+Skills.TamingUp=[[YELLOW]]Taming skill increased by {0}. Total ({1})
+Skills.AcrobaticsUp=[[YELLOW]]Acrobatics skill increased by {0}. Total ({1})
+Skills.ArcheryUp=[[YELLOW]]Archery skill increased by {0}. Total ({1})
+Skills.SwordsUp=[[YELLOW]]Swords skill increased by {0}. Total ({1})
+Skills.AxesUp=[[YELLOW]]Axes skill increased by {0}. Total ({1})
+Skills.UnarmedUp=[[YELLOW]]Unarmed skill increased by {0}. Total ({1})
+Skills.HerbalismUp=[[YELLOW]]Herbalism skill increased by {0}. Total ({1})
+Skills.MiningUp=[[YELLOW]]Mining skill increased by {0}. Total ({1})
+Skills.WoodcuttingUp=[[YELLOW]]Woodcutting skill increased by {0}. Total ({1})
+Skills.RepairUp=[[YELLOW]]Repair skill increased by {0}. Total ({1})
+Skills.ExcavationUp=[[YELLOW]]Excavation skill increased by {0}. Total ({1})
