--- a/mcMMO/com/gmail/nossr50/locale/locale_de.properties
+++ b/mcMMO/com/gmail/nossr50/locale/locale_de.properties
@@ -268,6 +268,8 @@ Skills.ReadyShovel=[[GREEN]]**DU BEREITEST DEINE SCHAUFEL VOR**
 Skills.LowerShovel=[[GRAY]]**DU SENKST DEINE SCHAUFEL**
 Skills.ReadySword=[[GREEN]]**DU ERHEBST DEIN SCHWERT**
 Skills.LowerSword=[[GRAY]]**DU SENKST DEIN SCHWERT**
+Skills.BerserkOn=[[GREEN]]**BERSERK ACTIVATED**
+Skills.BerserkPlayer=[[GREEN]]{0}[[DARK_GREEN]] has used [[RED]]Berserk!
 Skills.GreenTerraOn=[[GREEN]]**GRUENE WELT AKTIV**
 Skills.GreenTerraPlayer=[[GREEN]]{0}[[DARK_GREEN]] hat [[RED]]Green Terra[[DARK_GREEN]] benutzt!
 Skills.TreeFellerOn=[[GREEN]]**BAUMFAELLER AKTIV**
