--- a/mcMMO/com/gmail/nossr50/locale/locale_fi.properties
+++ b/mcMMO/com/gmail/nossr50/locale/locale_fi.properties
@@ -268,6 +268,8 @@ Skills.ReadyShovel=[[GREEN]]**YOU READY YOUR SHOVEL**
 Skills.LowerShovel=[[GRAY]]**YOU LOWER YOUR SHOVEL**
 Skills.ReadySword=[[GREEN]]**YOU READY YOUR SWORD**
 Skills.LowerSword=[[GRAY]]**YOU LOWER YOUR SWORD**
+Skills.BerserkOn=[[GREEN]]**BERSERK ACTIVATED**
+Skills.BerserkPlayer=[[GREEN]]{0}[[DARK_GREEN]] has used [[RED]]Berserk!
 Skills.GreenTerraOn=[[GREEN]]**GREEN TERRA ACTIVATED**
 Skills.GreenTerraPlayer=[[GREEN]]{0}[[DARK_GREEN]] has used [[RED]]Green Terra!
 Skills.TreeFellerOn=[[GREEN]]**TREE FELLER ACTIVATED**
