--- a/mcMMO/Changelog.txt
+++ b/mcMMO/Changelog.txt
@@ -1,5 +1,13 @@
 Changelog:
 #Versions without changelogs probably had very small misc fixes, like tweaks to the source code
+Version 1.0.48
+Updated French Translation
+Updated German Translation
+Updated Polish Translation
+Placed Coal Ore and Redstone Ore won't give XP anymore
+Fixed unusually high memory usage at startup
+Added many features to the party system written by NuclearW
+
 Version 1.0.47
 Fixed another BukkitContrib error for servers not running BukkitContrib
 
